# pico_curl

./: .gitignore  CMakeLists.txt  hello.c  lwipopts.h  lwipopts_common.h  test.py
test/: CMakeLists.txt  test.c
